BIS-2381: app-openbis-drive: implement three modes of ignoring files for synchronization-tasks: GlobalDefault, SpecificList or None